{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 8,
  "lineage": "02c65719-fe7b-e537-c295-f33d45c0652f",
  "resources": [
    {
      "module": "module.kafka.module.broker_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:473805908684:security-group/sg-02762d23a56bba519",
            "description": "MSK broker access",
            "egress": [],
            "id": "sg-02762d23a56bba519",
            "ingress": [],
            "name": "pe-test-msko11y",
            "name_prefix": "",
            "owner_id": "473805908684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pe-test-msko11y",
              "Namespace": "pe",
              "Stage": "test"
            },
            "tags_all": {
              "Name": "pe-test-msko11y",
              "Namespace": "pe",
              "Stage": "test"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dc9e60d117e95539"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kafka.module.broker_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3853933568",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02762d23a56bba519",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka.module.broker_security_group.aws_security_group.cbd",
            "module.kafka.module.broker_security_group.aws_security_group.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}